--- a/admin/package.json
+++ b/admin/package.json
@@ -19,6 +19,8 @@
     "@lexical/rich-text": "^0.23.1",
     "@lexical/selection": "^0.23.1",
     "@lexical/utils": "^0.23.1",
+    "@mantine/core": "^7.16.3",
+    "@mantine/hooks": "^7.16.3",
     "@material-tailwind/html": "^2.3.2",
     "@material-tailwind/react": "^2.1.10",
     "@tinymce/tinymce-react": "^5.1.1",
@@ -48,7 +50,9 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.2",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
