--- a/admin/package.json
+++ b/admin/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.9",
     "draft-js": "^0.11.7",
     "lexical": "^0.23.1",
+    "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
     "quill": "^2.0.3",
     "react": "^18.3.1",
