--- a/admin/package.json
+++ b/admin/package.json
@@ -54,6 +54,7 @@
     "postcss": "^8.5.2",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
+    "shadcn-ui": "^0.9.4",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
